<resources>
    <string name="app_name">BodyMassIndexCalculator</string>
    <string name="action_settings">Settings</string>
    <string name="text_welcome">Welcome to the BMI Calculator</string>
    <string name="text_height">Please enter your height in feet and inches (as numbers):</string>
    <string name="edit_feet">Feet</string>
    <string name="edit_inches">Inches</string>
    <string name="text_weight">And enter your weight in pounds (as a number):</string>
    <string name="edit_pounds">Pounds</string>
    <string name="button_calculate_bmi">Get BMI</string>
    <string name="text_results">Results:</string>
</resources>
